<resources>
    <string name="app_name">AQUI_ESTOY</string>
    <string name="sig_in_title">Registrarse</string>
    <string name="placeholder_email">Correo electronico</string>
    <string name="placeholder_password">Contraseña</string>
    <string name="placeholder_confirmPassword">Confirmar contraseña</string>
    <string name="placeholder_name">Nombre</string>
    <string name="placeholder_numero">Numero</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="get_in_title">Ingresar</string>
    <string name="share_button_description">share</string>
    <string name="love_button_description">love</string>
</resources>