<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin">

    <TextView
        android:id="@+id/signTextView_title"
        android:layout_width="224dp"
        android:layout_height="35dp"
        android:layout_marginTop="88dp"
        android:lineSpacingExtra="20sp"
        android:text="@string/sig_in_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/siginText_email"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="266dp"
        android:layout_height="53dp"
        android:layout_marginTop="72dp"
        android:background="@color/white"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signTextView_title" />

    <EditText
        android:id="@+id/siginText_password"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/placeholder_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@android:color/darker_gray"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siginText_email" />
    <EditText
        android:id="@+id/signText_comfirm_password"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/placeholder_confirmPassword"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@android:color/darker_gray"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siginText_password" />
    <EditText
        android:id="@+id/signText_name"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/placeholder_name"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@android:color/darker_gray"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signText_comfirm_password" />
    <EditText
        android:id="@+id/signText_numero"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/placeholder_numero"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@android:color/darker_gray"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signText_name" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@color/teal_200"
        android:text="@string/sig_in_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signText_numero"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>