<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editText_email"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="266dp"
        android:layout_height="53dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@android:color/darker_gray"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="224dp"
        android:layout_height="35dp"
        android:layout_marginTop="88dp"
        android:background="@color/ambar_200"
        android:lineSpacingExtra="20sp"
        android:text="@string/get_in_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_password"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/placeholder_password"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@android:color/darker_gray"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/get_in_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password"
        app:layout_constraintVertical_bias="0.029" />

</androidx.constraintlayout.widget.ConstraintLayout>